syntax = "proto3";
package pocket.gateway;

import "gogoproto/gogo.proto";
import "pocket/gateway/params.proto";

option go_package = "pocket/x/gateway/types";

// GenesisState defines the gateway module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
