syntax = "proto3";
package poktroll.proof;

option go_package = "github.com/pokt-network/poktroll/x/proof/types";
option (gogoproto.stable_marshaler_all) = true;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "poktroll/proof/params.proto";
import "poktroll/proof/types.proto";

// Query defines the gRPC querier service.
service Query {

  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/proof/params";

  }

  // Queries a list of Claim items.
  rpc Claim     (QueryGetClaimRequest ) returns (QueryGetClaimResponse ) {
    option (google.api.http).get = "/pokt-network/poktroll/proof/claim/{session_id}/{supplier_operator_address}";

  }
  rpc AllClaims (QueryAllClaimsRequest) returns (QueryAllClaimsResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/proof/claim";

  }

  // Queries a list of Proof items.
  rpc Proof    (QueryGetProofRequest) returns (QueryGetProofResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/proof/proof/{session_id}/{supplier_operator_address}";

  }
  rpc AllProofs (QueryAllProofsRequest) returns (QueryAllProofsResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/proof/proof";

  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetClaimRequest {
  string session_id = 1;
  string supplier_operator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message QueryGetClaimResponse {
  Claim claim = 1 [(gogoproto.nullable) = false];
}

message QueryAllClaimsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;

  oneof filter {
    string supplier_operator_address= 2;
    string session_id = 3;
    uint64 session_end_height = 4;
  }
}

message QueryAllClaimsResponse {
  repeated Claim claims = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetProofRequest {
  string session_id = 1;
  string supplier_operator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message QueryGetProofResponse {
  Proof proof = 1 [(gogoproto.nullable) = false];
}

message QueryAllProofsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;

  oneof filter {
    string supplier_operator_address = 2;
    string session_id = 3;
    uint64 session_end_height = 4;
  }
}

message QueryAllProofsResponse {
  repeated Proof proofs = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

